Update image for - 21d5adcdc78b2a43e7e44c1074ad89c216f47dbb

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: thienyet1011/gitops:55f807c75a4a0b86c1a05336b97d06f66bbca74a
+          image: ghcr.io/thienyet1011/gitops:21d5adcdc78b2a43e7e44c1074ad89c216f47dbb
           imagePullPolicy: Always
           ports:
             - containerPort: 80
