fix: resolve conflict

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,5 +18,17 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 15
+            periodSeconds: 20
       imagePullSecrets:
         - name: github-cr-secret
